--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,19 +13,24 @@
   "dependencies": {
     "@types/react-calendar": "^4.1.0",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.17",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
